TDI-26812 fixed: Add the support for Kerberos on the Hive components.
git-svn-id: http://talendforge.org/svn/tos/trunk@108486 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -99,3 +99,14 @@ USE_YARN.NAME=Use Yarn
 SET_RESOURCE_MANAGER.NAME=Set Resource Manager
 RESOURCE_MANAGER.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
+
+USE_KRB.NAME=Use kerberos authentication
+HIVE_PRINCIPAL.NAME=Hive principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
+METASTORE_JDBC_URL.NAME=Metastore URL
+METASTORE_CLASSNAME.NAME=Driver class
+METASTORE_USERNAME.NAME=Username
+METASTORE_PASSWORD.NAME=Password
