--- a/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -13,6 +13,7 @@ HCAT_VERSION.NAME=HCatalog version
 HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 HCAT_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HCAT_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
+HCAT_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 
 HDFS_CONFIGURATION.NAME=HDFS Configuration
 
