--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -76,6 +76,7 @@ HBASE_VERSION.NAME=Version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 HBASE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HBASE_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
+HBASE_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 HBASE_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (HBase 0.90.1)
 HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR1=MapR 1.2.0
