--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -94,6 +94,7 @@ DB_VERSION.ITEM.MAPR213=MapR 2.1.3 (Sqoop 1.4.2)
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
+DB_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 
 FS_DEFAULT_NAME.NAME=NameNode URI
