fix Work item TDI-27282: need to do for tSqoopMerge https://jira.talendforge.org/browse/TDI-27282
git-svn-id: http://talendforge.org/svn/tos/trunk@108562 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -134,3 +134,5 @@ DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
 CLASSPATH_SEPARATOR.NAME=Path separator in server
+
+CUSTOMCLASSNAME.NAME=Custom class name
