--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -51,6 +51,10 @@
             libraries="hbase-0.94.6.1.3.0.0-107-security.jar;zookeeper-3.4.5.1.3.0.0-107.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-core-1.2.0.1.3.0.0-107.jar;log4j-1.2.16.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;protobuf-java-2.4.0a.jar">
       </classloader>
       <classloader
+            index="HBASE:HORTONWORKS:HDP_2_0"
+            libraries="hbase-client-0.95.2.2.0.5.0-67.jar;hbase-common-0.95.2.2.0.5.0-67.jar;hbase-protocol-0.95.2.2.0.5.0-67.jar;zookeeper-3.4.5.2.0.5.0-67.jar;hadoop-common-2.1.0.2.0.5.0-67.jar;hadoop-auth-2.1.0.2.0.5.0-67.jar;htrace-1.50.jar;commons-lang-2.6.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-codec-1.7.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.16.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+      </classloader>
+      <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH3"
             libraries="commons-lang3-3.0.jar;commons-logging-1.1.1.jar;hadoop-core-0.20.203.0.jar;hbase-0.90.1-cdh3u0.jar;log4j-1.2.16.jar;zookeeper-3.3.3-cdh3u0.jar">
       </classloader>
@@ -69,6 +73,10 @@
       <classloader
             index="HBASE:MAPR:MAPR213"
             libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core-mapr213.jar;hbase-0.94.5-mapr.jar;log4j-1.2.16.jar;zookeeper-3.4.5.jar;guava-11.0.2.jar;slf4j-api-1.4.3.jar;slf4j-log4j12-1.4.3.jar;protobuf-java-2.4.0a.jar">
+      </classloader>
+      <classloader
+            index="HBASE:MAPR:MAPR301"
+            libraries="commons-lang-2.6.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core301.jar;hbase-0.94.9-mapr-1308.jar;log4j-1.2.16.jar;zookeeper-3.4.5.jar;guava-11.0.2.jar;slf4j-api-1.4.3.jar;slf4j-log4j12-1.4.3.jar;protobuf-java-2.4.0a.jar">
       </classloader>
       <classloader
             index="HBASE:PIVOTAL_HD:PIVOTAL_HD_1_0_1"
