Fix Bug TDI-27577 : HCatStorer doesn't work in the tPigStoreResult https://jira.talendforge.org/browse/TDI-27577
git-svn-id: http://talendforge.org/svn/tos/trunk@108695 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -104,3 +104,7 @@ METASTORE_JDBC_URL.NAME=Metastore URL
 METASTORE_CLASSNAME.NAME=Driver class
 METASTORE_USERNAME.NAME=Username
 METASTORE_PASSWORD.NAME=Password
+
+ADVANCED_PROPERTIES.NAME=Hive Properties 
+ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+ADVANCED_PROPERTIES.ITEM.VALUE=Value
