Fix Work Item TDI-27448 : tCassandraInput/Output do not support all data types on cassandra https://jira.talendforge.org/browse/TDI-27448 fix wrong configuration on SUPER_COLUMN_C_TYPE and add missing property BigDecimal
git-svn-id: http://talendforge.org/svn/tos/trunk@108729 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -58,6 +58,7 @@ SUPER_COLUMN_TYPE.ITEM.BYTE_ARRAY=byte[]
 SUPER_COLUMN_TYPE.ITEM.BOOLEAN=Boolean
 SUPER_COLUMN_TYPE.ITEM.OBJECT=Object
 SUPER_COLUMN_TYPE.ITEM.SHORT=Short
+SUPER_COLUMN_TYPE.ITEM.BIGDECIMAL=BigDecimal
 COLUMNS.NAME=Columns
 SUPER_KEY_COLUMN.NAME=Super columns
 USERNAME.NAME=Username
