--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -29,6 +29,7 @@ PIG_VERSION.ITEM.MAPR1=MapR 1.2.0
 PIG_VERSION.ITEM.MAPR2=MapR 2.0.0
 PIG_VERSION.ITEM.MAPR212=MapR 2.1.2
 PIG_VERSION.ITEM.MAPR213=MapR 2.1.3
+PIG_VERSION.ITEM.MAPR3=MapR 3.0.1
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
