Fix Feature TDI-27701 : Support the YANR mode for CDH4.3 and CDH4.4 https://jira.talendforge.org/browse/TDI-27701
git-svn-id: http://talendforge.org/svn/tos/trunk@109196 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -119,6 +119,7 @@ DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 DB_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 
 FS_DEFAULT_NAME.NAME=NameNode URI
