--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -32,6 +32,7 @@ PIG_VERSION.ITEM.MAPR213=MapR 2.1.3
 PIG_VERSION.ITEM.MAPR3=MapR 3.0.1
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+PIG_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 PIG_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
