bug TUP-1118 fixed:Need to improve the import demos.
git-svn-id: http://talendforge.org/svn/tos/trunk@109210 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.demo.bigdata.ce/plugin.xml
+++ b/org.talend.demo.bigdata.ce/plugin.xml
@@ -5,7 +5,7 @@
          point="org.talend.core.runtime.demoProjects_provider">
       <demoProvider
             descHtml="resources/bd_demos.html"
-            description="Big Data(BD) Demo"
+            description="%demo.description"
             icon="resources/product-icon-bd-16px.gif"
             id="org.talend.demo.project.bd.ce"
             name="Big Data Demo"
