--- a/org.talend.demo.bigdata.ce/build.properties
+++ b/org.talend.demo.bigdata.ce/build.properties
@@ -3,4 +3,5 @@ output.. = classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               resources/
+               resources/,\
+               plugin.properties
