Fix Bug TDI-27700 : Support CDH4.3 and CDH4.4 in MR 1 https://jira.talendforge.org/browse/TDI-27700
git-svn-id: http://talendforge.org/svn/tos/trunk@109351 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -33,7 +33,7 @@ HIVE_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 HIVE_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (Hive 0.7.1)
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
-HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HIVE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 HIVE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HIVE_VERSION.ITEM.MAPR212=MapR 2.1.2
