--- a/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -30,7 +30,7 @@ HBASE_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (HBase 0.90.1)
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
-HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HBASE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
