fix Bug TDI-27581: Need to add two parameters to define memory parameters for HDP 1.2 and HDP 1.3 https://jira.talendforge.org/browse/TDI-27581
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_3@109435 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -112,3 +112,6 @@ HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LTE=lte
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CACHING=caching
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LIMIT=limit
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CASTER=caster
+
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
