--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -129,3 +129,6 @@ SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-partition-num=teradat
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-batch-size=teradata.db.input.batch.size
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
 SPEED_PARALLEL.NAME=Connector specific configuration
+
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
