--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -83,3 +83,6 @@ REGISTER_JAR.ITEM.JAR_NAME.ITEM.ZOOKEEPER=zookeeper
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.PROTOBUF-JAVA=protobuf-java
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
