fix Bug TDI-27581: Need to add two parameters to define memory parameters for HDP 1.2 and HDP 1.3 https://jira.talendforge.org/browse/TDI-27581
git-svn-id: http://talendforge.org/svn/tos/trunk@109437 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -115,3 +115,5 @@ METASTORE_PASSWORD.NAME=Password
 ADVANCED_PROPERTIES.NAME=Hive Properties 
 ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 ADVANCED_PROPERTIES.ITEM.VALUE=Value
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
