--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -136,3 +136,5 @@ RESOURCE_MANAGER.NAME=Resource Manager
 SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
 JOBHISTORY_ADDRESS.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
