--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -152,3 +152,5 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
 CLASSPATH_SEPARATOR.NAME=Path separator in server
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
