--- a/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -134,3 +134,5 @@ DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
 CLASSPATH_SEPARATOR.NAME=Path separator in server
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
