fix Bug TDI-27264: sqoop throw error when use java API on windons system https://jira.talendforge.org/browse/TDI-27264
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_3@109692 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -83,6 +83,6 @@ REGISTER_JAR.ITEM.JAR_NAME.ITEM.ZOOKEEPER=zookeeper
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.PROTOBUF-JAVA=protobuf-java
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
-
+CLASSPATH_SEPARATOR.NAME=Path separator in server
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
