--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -93,3 +93,5 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
+
+CLASSPATH_SEPARATOR.NAME=Path separator in server
