--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -119,5 +119,6 @@ SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-teradata-text-separa
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
 
 SPEED_PARALLEL.NAME=Connector specific configuration
+CLASSPATH_SEPARATOR.NAME=Path separator in server
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
