feature TDI-27782 added : GUI update for CDH4.4
git-svn-id: http://talendforge.org/svn/tos/trunk@109698 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/org.talend.designer.hdfsbrowse/plugin.xml
@@ -58,6 +58,10 @@
             libraries="hadoop-hdfs-2.0.0-cdh4.0.1.jar;hadoop-common-2.0.0-cdh4.0.1.jar;hadoop-auth-2.0.0-cdh4.0.1.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;guava-11.0.2.jar;log4j-1.2.15.jar;protobuf-java-2.4.0a.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
       </classloader>
       <classloader
+            index="HDFS:CLOUDERA:Cloudera_CDH4_YARN"
+            libraries="hadoop-hdfs-2.0.0-cdh4.4.0.jar;hadoop-common-2.0.0-cdh4.4.0.jar;hadoop-auth-2.0.0-cdh4.4.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;protobuf-java-2.4.0a.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;">
+      </classloader>
+      <classloader
             index="HDFS:MAPR:MAPR1"
             libraries="hadoop-0.20.2-dev-core.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar">
       </classloader>
