--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -63,6 +63,10 @@
             libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;guava-11.0.2.jar;hadoop-auth-2.0.0-cdh4.0.1.jar;hadoop-common-2.0.0-cdh4.0.1.jar;hbase-0.92.1-cdh4.0.1-security.jar;log4j-1.2.16.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;zookeeper-3.4.3-cdh4.0.1.jar">
       </classloader>
       <classloader
+            index="HBASE:CLOUDERA:Cloudera_CDH4_YARN"
+            libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;guava-11.0.2.jar;protobuf-java-2.4.0a.jar;hadoop-auth-2.0.0-cdh4.4.0.jar;hadoop-common-2.0.0-cdh4.4.0.jar;hbase-0.94.6-cdh4.4.0-security.jar;log4j-1.2.16.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;zookeeper-3.4.5-cdh4.4.0.jar;">
+      </classloader>
+      <classloader
             index="HBASE:MAPR:MAPR2"
             libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core-mapr212.jar;hbase-0.94.5-mapr.jar;log4j-1.2.16.jar;zookeeper-3.4.5.jar;guava-r09.jar;slf4j-api-1.4.3.jar;slf4j-log4j12-1.4.3.jar;protobuf-java-2.4.0a.jar">
       </classloader>
