bug TDI-27795 fixed : wrong jar name for mapr 3.0.1 connection
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@109736 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -80,7 +80,7 @@
       </classloader>
       <classloader
             index="HBASE:MAPR:MAPR301"
-            libraries="commons-lang-2.6.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core301.jar;hbase-0.94.9-mapr-1308.jar;log4j-1.2.16.jar;zookeeper-3.4.5.jar;guava-11.0.2.jar;slf4j-api-1.4.3.jar;slf4j-log4j12-1.4.3.jar;protobuf-java-2.4.0a.jar">
+            libraries="commons-lang-2.6.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core-mapr301.jar;hbase-0.94.9-mapr-1308.jar;log4j-1.2.16.jar;zookeeper-3.4.5.jar;guava-11.0.2.jar;slf4j-api-1.4.3.jar;slf4j-log4j12-1.4.3.jar;protobuf-java-2.4.0a.jar">
       </classloader>
       <classloader
             index="HBASE:PIVOTAL_HD:PIVOTAL_HD_1_0_1"
