TUP-1159 : can not create HDP 2.0 for hive connection
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@109953 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -52,7 +52,7 @@
       </classloader>
       <classloader
             index="HBASE:HORTONWORKS:HDP_2_0"
-            libraries="hbase-client-0.95.2.2.0.5.0-67.jar;hbase-common-0.95.2.2.0.5.0-67.jar;hbase-protocol-0.95.2.2.0.5.0-67.jar;zookeeper-3.4.5.2.0.5.0-67.jar;hadoop-common-2.1.0.2.0.5.0-67.jar;hadoop-auth-2.1.0.2.0.5.0-67.jar;htrace-1.50.jar;commons-lang-2.6.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-codec-1.7.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.16.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+            libraries="netty-3.5.5.Final.jar;hbase-client-0.96.0.2.0.6.0-76-hadoop2.jar;hbase-common-0.96.0.2.0.6.0-76-hadoop2.jar;hbase-protocol-0.96.0.2.0.6.0-76-hadoop2.jar;zookeeper-3.4.5.jar;hadoop-common-2.2.0.2.0.6.0-76.jar;hadoop-auth-2.2.0.2.0.6.0-76.jar;htrace-core-2.01.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-codec-1.4.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH3"
