--- a/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/org.talend.designer.hdfsbrowse/plugin.xml
@@ -35,7 +35,7 @@
       </classloader>
       <classloader
             index="HDFS:HORTONWORKS:HDP_2_0"
-            libraries="hadoop-common-2.1.0.2.0.5.0-67.jar;hadoop-auth-2.1.0.2.0.5.0-67.jar;hadoop-hdfs-2.1.0.2.0.5.0-67.jar;commons-cli-1.2.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;guava-11.0.2.jar;log4j-1.2.17.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;protobuf-java-2.5.0.jar;">
+            libraries="hadoop-common-2.2.0.2.0.6.0-76.jar;hadoop-auth-2.2.0.2.0.6.0-76.jar;hadoop-hdfs-2.2.0.2.0.6.0-76.jar;commons-cli-1.2.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;guava-11.0.2.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar">
       </classloader>
       <classloader
             index="HDFS:APACHE:APACHE_1_0_0"
@@ -83,7 +83,7 @@
       </classloader>
       <classloader
             index="HDFS:HORTONWORKS:HDP_2_0?USE_KRB"
-            libraries="hadoop-common-2.1.0.2.0.5.0-67.jar;hadoop-auth-2.1.0.2.0.5.0-67.jar;hadoop-hdfs-2.1.0.2.0.5.0-67.jar;commons-cli-1.2.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;guava-11.0.2.jar;log4j-1.2.17.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;protobuf-java-2.5.0.jar;">
+            libraries="hadoop-common-2.2.0.2.0.6.0-76.jar;hadoop-auth-2.2.0.2.0.6.0-76.jar;hadoop-hdfs-2.2.0.2.0.6.0-76.jar;commons-cli-1.2.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;guava-11.0.2.jar;log4j-1.2.17.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;protobuf-java-2.5.0.jar">
       </classloader>
       <classloader
             index="HDFS:APACHE:APACHE_1_0_0?USE_KRB"
