TDI-27581: change the parameter label.
git-svn-id: http://talendforge.org/svn/tos/trunk@110100 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -117,5 +117,7 @@ METASTORE_PASSWORD.NAME=Password
 ADVANCED_PROPERTIES.NAME=Hive Properties 
 ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 ADVANCED_PROPERTIES.ITEM.VALUE=Value
-MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
-MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
+
+MEMORY_PARAMETERS.NAME=Job memory parameters
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Map (in Mb)
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Reduce (in Mb)
