--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -136,5 +136,7 @@ RESOURCE_MANAGER.NAME=Resource Manager
 SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
 JOBHISTORY_ADDRESS.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
-MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
-MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
+
+MEMORY_PARAMETERS.NAME=Job memory parameters
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Map (in Mb)
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Reduce (in Mb)
