--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -138,5 +138,7 @@ RESOURCE_MANAGER.NAME=Resource Manager
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 CUSTOMCLASSNAME.NAME=Custom class name
-MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
-MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
+
+MEMORY_PARAMETERS.NAME=Job memory parameters
+MAPRED_JOB_MAP_MEMORY_MB.NAME = Map (in Mb)
+MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Reduce (in Mb)
