Fix Feature TDI-26391: Support SAP Hana for Talend big data . https://jira.talendforge.org/browse/TDI-26391 fixed bug about saphana
git-svn-id: http://talendforge.org/svn/tos/trunk@110226 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages.properties
@@ -80,3 +80,9 @@ BATCH_SIZE.NAME= Batch Size
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.HDB_1_0=HDB 1.0
 PROPERTIES.NAME=Additional JDBC Parameters
+TABLE_TYPE.NAME=Type of table storage
+TABLE_TYPE.ITEM.ROW=Row
+TABLE_TYPE.ITEM.COLUMN=Column
+TABLE_TYPE.ITEM.HISTORY_COLUMN=History column
+TABLE_TYPE.ITEM.GLOBAL_TEMPORARY=Global temporary
+TABLE_TYPE.ITEM.LOCAL_TEMPORARY=Local temporary
