--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -159,3 +159,10 @@ ADVANCED_PROPERTIES.ITEM.VALUE=Value
 MEMORY_PARAMETERS.NAME=Job memory parameters
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Map (in Mb)
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Reduce (in Mb)
+
+SET_SCHEDULER_ADDRESS.NAME=Set resourcemanager scheduler address
+RESOURCEMANAGER_SCHEDULER_ADDRESS.NAME=
+SET_MEMORY.NAME=Set memory
+MAPREDUCE_MAP_MEMORY_MB.NAME= Map (in Mb)
+MAPREDUCE_REDUCE_MEMORY_MB.NAME= Reduce (in Mb)
+YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
