Fix Bug TDI-28141 : add the username support for sqoop and pig https://jira.talendforge.org/browse/TDI-28141
git-svn-id: http://talendforge.org/svn/tos/trunk@110850 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -153,3 +153,5 @@ SET_MEMORY.NAME=Set memory
 MAPREDUCE_MAP_MEMORY_MB.NAME= Map (in Mb)
 MAPREDUCE_REDUCE_MEMORY_MB.NAME= Reduce (in Mb)
 YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
+
+HADOOP_USER.NAME=Hadoop user name
