--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -147,3 +147,5 @@ SET_MEMORY.NAME=Set memory
 MAPREDUCE_MAP_MEMORY_MB.NAME= Map (in Mb)
 MAPREDUCE_REDUCE_MEMORY_MB.NAME= Reduce (in Mb)
 YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME= ApplicationMaster (in Mb)
+
+USERNAME.NAME=User name
