TDI-27578 fixed: Add the namenode and jobtracker principals.
git-svn-id: http://talendforge.org/svn/tos/trunk@111297 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -98,6 +98,8 @@ CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 USE_KRB.NAME=Use kerberos authentication
 HIVE_PRINCIPAL.NAME=Hive principal
+NAMENODE_PRINCIPAL.NAME=Namenode principal
+JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
 USE_KEYTAB.NAME=Use a keytab to authenticate
 PRINCIPAL.NAME=Principal
 KEYTAB_PATH.NAME=Keytab
