--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -144,6 +144,8 @@ SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-partition-num=teradat
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-batch-size=teradata.db.input.batch.size
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
 SPEED_PARALLEL.NAME=Connector specific configuration
+USE_ADDITION_PARAM.NAME=Use additional params
+SPECIFIC_ADDITION_PARAM.NAME=Specific additional params
 
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
