Fixed Bug TDI-28307: Not set the value for "NB_LINE" property in tMicrosoftCrmInput component https://jira.talendforge.org/browse/TDI-28307
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_3@111622 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
@@ -14,6 +14,7 @@ FIELD_PARTITION.NAME=Field Partition
 FIELD_PARTITION.ITEM.COLUMN_NAME=Partition Column
 FIELD_PARTITION.ITEM.COLUMN_VALUE=Partition Value
 
+NB_LINE.NAME=Number of line
 NB_LINE_INSERTED.NAME=Number Of Inserted Lines
 NB_LINE_OVERWRITE.NAME=Number Of Overwrite Lines
 
