Fix Bug TDI-28141 : add the username support for sqoop and pig https://jira.talendforge.org/browse/TDI-28141
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_3@111633 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -114,3 +114,5 @@ CONFIGURATION.NAME=Configuration
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
+
+HADOOP_USER.NAME=Hadoop user name
