--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -116,3 +116,5 @@ HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CASTER=caster
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
+
+USERNAME.NAME=User name
