--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -133,3 +133,5 @@ SPEED_PARALLEL.NAME=Connector specific configuration
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
+
+HADOOP_USER.NAME=Hadoop user name
