TDI-28360 : delete folder in in Hadoop Cluster failed
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@111730 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -34,7 +34,7 @@
             folder="metadata/hadoop/hadoopcluster"
             icon="icons/hadoop-logo-16x16.png"
             isResouce="true"
-            key="repository.hadoopCluster"
+            key="repository.metadata.hadoopCluster"
             label="%hadoopCluster"
             ordinal="50"
             products="DI"
