--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -119,6 +119,8 @@ SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-teradata-text-separa
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
 
 SPEED_PARALLEL.NAME=Connector specific configuration
+USE_ADDITION_PARAM.NAME=Use additional params 
+SPECIFIC_ADDITION_PARAM.NAME=Specific additional params 
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Mapred job reduce memory mb
