--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -129,6 +129,8 @@ SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-partition-num=teradat
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-batch-size=teradata.db.input.batch.size
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
 SPEED_PARALLEL.NAME=Connector specific configuration
+USE_ADDITION_PARAM.NAME=Use additional params 
+SPECIFIC_ADDITION_PARAM.NAME=Specific additional params 
 
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 MAPRED_JOB_MAP_MEMORY_MB.NAME = Mapred job map memory mb
