Fixed Bug TDI-24061: when using tCassandraOutput to create a column family, in the cassandra-cli, it display the column name in binary which is not good https://jira.talendforge.org/browse/TDI-24061 Note:1.Add check box to control CF define 2.Add add migration task 3.Fixed key column add into the columns problem
git-svn-id: http://talendforge.org/svn/tos/trunk@112769 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -58,3 +58,4 @@ COMPARATOR.ITEM.LEXICALUUIDTYPE=LexicalUUIDType
 COMPARATOR.ITEM.LONGTYPE=LongType
 COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
 COMPARATOR.ITEM.UTF8TYPE=UTF8Type
+DEFINE_CF_STRUCTS.NAME=Define column family structure
