Fixed Bug TDI-24061: when using tCassandraOutput to create a column family, in the cassandra-cli, it display the column name in binary which is not good https://jira.talendforge.org/browse/TDI-24061 Note:fixed branch 5.4
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_4@113182 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -51,3 +51,11 @@ DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+COMPARATOR.NAME=Column name comparator
+COMPARATOR.ITEM.ASCIITYPE=AsciiTYPE
+COMPARATOR.ITEM.BYTESTYPE=BytesType
+COMPARATOR.ITEM.LEXICALUUIDTYPE=LexicalUUIDType
+COMPARATOR.ITEM.LONGTYPE=LongType
+COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
+COMPARATOR.ITEM.UTF8TYPE=UTF8Type
+DEFINE_CF_STRUCTS.NAME=Define column family structure
