Fix Feature TDI-28743 : Support for CDH5 https://jira.talendforge.org/browse/TDI-28743
git-svn-id: http://talendforge.org/svn/tos/trunk@114287 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -7,6 +7,7 @@ VERSION.NAME=Version
 
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 
 HCAT_VERSION.NAME=HCatalog version
@@ -14,6 +15,7 @@ HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 HCAT_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HCAT_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 HCAT_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
+HCAT_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5(YARN mode)
 
 HDFS_CONFIGURATION.NAME=HDFS Configuration
 
