--- a/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -38,6 +38,7 @@ DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 DB_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
+DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5(YARN mode)
 DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 
