--- a/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -37,6 +37,7 @@ HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (Hive 0.7.1)
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HIVE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
+HIVE_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5(YARN mode)
 HIVE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HIVE_VERSION.ITEM.MAPR212=MapR 2.1.2
 HIVE_VERSION.ITEM.MAPR213=MapR 2.1.3
