--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -120,6 +120,7 @@ DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 DB_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
+DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5(YARN mode)
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 
 FS_DEFAULT_NAME.NAME=NameNode URI
