--- a/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/org.talend.designer.hdfsbrowse/plugin.xml
@@ -62,6 +62,10 @@
             libraries="hadoop-hdfs-2.0.0-cdh4.4.0.jar;hadoop-common-2.0.0-cdh4.4.0.jar;hadoop-auth-2.0.0-cdh4.4.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;protobuf-java-2.4.0a.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;">
       </classloader>
       <classloader
+            index="HDFS:CLOUDERA:Cloudera_CDH5"
+            libraries="hadoop-hdfs-2.2.0-cdh5.0.0-beta-2.jar;hadoop-common-2.2.0-cdh5.0.0-beta-2.jar;hadoop-auth-2.2.0-cdh5.0.0-beta-2.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.0-beta-2.jar;">
+      </classloader>
+      <classloader
             index="HDFS:MAPR:MAPR1"
             libraries="hadoop-0.20.2-dev-core.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar">
       </classloader>
