Fixed  Backlog Task TDI-28662: Add LOG4J function for tCouchDBXX https://jira.talendforge.org/browse/TDI-28662 Note:Add log4j function for tCouchDBXX.
git-svn-id: http://talendforge.org/svn/tos/trunk@114676 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
@@ -43,6 +43,10 @@ LOOP.NAME=JSON Loop
 MAP.NAME=Configure JSON Tree
 MAPPING.NAME=
 NB_LINE.NAME=Number of line
+NB_LINE_UPDATED.NAME=Number Of Updated Lines
+NB_LINE_INSERTED.NAME=Number Of Inserted Lines
+NB_LINE_UPSERTED.NAME=Number Of Upserted Lines
+NB_LINE_DELETED.NAME=Number Of Deleted Lines
 ROOT.ITEM.ATTRIBUTE=Attribute
 ROOT.ITEM.ORDER=Order
 ROOT.ITEM.COLUMN=Related Column
