TDI-28915 : There are some problems of hadoop custom version
git-svn-id: http://talendforge.org/svn/tos/trunk@115131 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/.classpath
+++ b/org.talend.oozie.scheduler/.classpath
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hadoop-auth-2.0.2-alpha.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdk.tools-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/oozie-client-3.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/oozie-client-3.3.0.jar" sourcepath="D:/lib/ozzie/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/xercesImpl-2.10.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
