--- a/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -31,6 +31,7 @@ DB_VERSION.ITEM.MAPR2=MapR 2.0.0
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2
 DB_VERSION.ITEM.MAPR213=MapR 2.1.3
 DB_VERSION.ITEM.MAPR301=MapR 3.0.1
+DB_VERSION.ITEM.MAPR310=MapR 3.1.0
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
