--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -30,6 +30,7 @@ PIG_VERSION.ITEM.MAPR2=MapR 2.0.0
 PIG_VERSION.ITEM.MAPR212=MapR 2.1.2
 PIG_VERSION.ITEM.MAPR213=MapR 2.1.3
 PIG_VERSION.ITEM.MAPR301=MapR 3.0.1
+PIG_VERSION.ITEM.MAPR310=MapR 3.1.0
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 PIG_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
