--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -84,6 +84,7 @@ HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HBASE_VERSION.ITEM.MAPR212=MapR 2.1.2
 HBASE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HBASE_VERSION.ITEM.MAPR301=MapR 3.0.1
+HBASE_VERSION.ITEM.MAPR310=MapR 3.1.0
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HBASE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
