--- a/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -40,5 +40,6 @@ HBASE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HBASE_VERSION.ITEM.MAPR301=MapR 3.0.1
 HBASE_VERSION.ITEM.MAPR310=MapR 3.1.0
 HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+HBASE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
