--- a/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -77,3 +77,4 @@ FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.SUBSTRING_COMPARATOR=Subtring comparator
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+HBASE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
