--- a/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -84,3 +84,4 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+HBASE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
