--- a/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
@@ -36,6 +36,7 @@ DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 
 AUTHENTICATION_MODE.NAME=Authentication
 AUTHENTICATION_MODE.ITEM.USERNAME=Username
