--- a/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
@@ -75,3 +75,4 @@ MERGENAME.NAME=Output file name
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
