--- a/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -88,3 +88,4 @@ HEADER.NAME=Header
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
