--- a/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
@@ -91,3 +91,4 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
