--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -100,6 +100,7 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 HIVE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+HIVE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 USE_YARN.NAME=Use Yarn
 SET_RESOURCE_MANAGER.NAME=Set Resource Manager
 RESOURCE_MANAGER.NAME=
