--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -38,6 +38,7 @@ PIG_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 PIG_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+PIG_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
