--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -91,6 +91,7 @@ HBASE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 HBASE_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
 HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+HBASE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 
 CUSTOM_JARS.NAME=Custom jars
 CUSTOM_JARS.ITEM.JAR_NAME=Jar name
